# pepper_developed

./: LICENSE  README.md
pepper_developed/: CMakeLists.txt  package.xml
pepper_developed/config/: laser_config.rviz  laser_config_real.rviz
pepper_developed/launch/: gmapping.launch  pcl2laser.launch  pepper_bringup.launch  pepper_teleoperation.launch  pepper_teleoperation_omni.launch  pepper_teleoperation_omni_final.launch  pepper_teleoperation_omni_sim.launch
pepper_developed/scripts/: joint_traj.py  pepper_teleoperation.py  pepper_teleoperation_omni.py  pepper_teleoperation_omni_final.py  pepper_teleoperation_omni_sim.py
pepper_developed/src/: enable_pepper.cpp  head_control.cpp  start_pepper.cpp
pepper_lib_developed/: CMakeLists.txt  package.xml
pepper_lib_developed/include/pepper_lib_developed/: pepper_head.hpp  pepper_tools.hpp
pepper_lib_developed/src/: pepper_head.cpp  pepper_tools.cpp
teleop_twist_joy/config/: ps3-holonomic.config.yaml  ps3-holonomic_sim.config.yaml
teleop_twist_joy/launch/: teleop.launch
teleop_twist_joy/scripts/: disable_mouse.sh
