<?xml version="1.0"?>
<package format="2">
  <name>pepper_lib_developed</name>
  <version>0.0.0</version>
  <description>The pepper_lib_developed package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="robotics@todo.todo">robotics</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>naoqi_libqi</depend>
  <depend>naoqi_libqicore</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
